# mini-docker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
binaries/: hello  hello.cpp  hello1
data/: cfg.json  cfg1.json
include/: cgroup.h  cgroups.hpp  client.h  container.h  containerConfig.h  docker.h  namespaces.h  namespaces.hpp
src/: cgroup.cpp  cgroups.cpp  client.cpp  container.cpp  docker.cpp  main.cpp  namespaces.cpp
tests/testConfigs/: networkTest.json  pythonTest.json  slarmTest.json  ubuntuTest.json
